--- a/Projects.html
+++ b/Projects.html
@@ -15,14 +15,14 @@
   <!-- Navigation Bar -->
   <nav class="navbar navbar-expand-lg navbar-dark shadow-5-strong fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/index.html">RP</a>
+      <a class="navbar-brand" href="index.html">RP</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="/CV_New.pdf" download="/CV_New.pdf">CV-Download</a>
+            <a class="nav-link" href="CV_New.pdf" download="CV_New.pdf">CV-Download</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact-me">Contact-Me</a>
@@ -40,31 +40,31 @@
     <div class="row">
         <div class="column col-lg-4 col-md-4">
           <div class="card hidden">
-            <img src="/images/Dice.PNG" alt="">
+            <img src="images/Dice.PNG" alt="">
             <a href="projects/Dice Challenge/dicee.html" target="_blank">Dice Challenge</a>
           </div>
         </div>
         <div class="column col-lg-4 col-md-4">
           <div class="card hidden">
-            <img src="/images/Drum.PNG" alt="">
+            <img src="images/Drum.PNG" alt="">
             <a href="projects/Drum Kit/index.html" target="_blank">Drum Kit</a>
           </div>
         </div>
         <div class="column col-lg-4 col-md-4">
           <div class="card hidden">
-            <img src="/images/Simon.PNG" alt="">
+            <img src="images/Simon.PNG" alt="">
             <a href="projects/Simon Game/index.html" target="_blank">Simon Game</a>
           </div>
         </div>
         <div class="column col-lg-4 col-md-4">
           <div class="card hidden">
-            <img src="/images/Tindog.PNG" alt="">
+            <img src="images/Tindog.PNG" alt="">
             <a href="projects/TinDog-Start-master/index.html" target="_blank">TinDog</a>
           </div>
         </div>
         <div class="column col-lg-4 col-md-4">
           <div class="card hidden">
-            <img src="/images/Weather.PNG" alt="">
+            <img src="images/Weather.PNG" alt="">
             <a href="projects/Weather/index.html" target="_blank">Weather App</a>
           </div>
        </div>
