--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li> -->
           <li class="nav-item">
-            <a class="nav-link" href="/CV_New.pdf" download="/CV_New.pdf">CV-Download</a>
+            <a class="nav-link" href="CV_New.pdf" download="CV_New.pdf">CV-Download</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact-me">Contact-Me</a>
@@ -55,7 +55,7 @@
         <h2>happy to see you, here's a peep into my life</h2>
       </div>
       <div class="workex">
-        <img class="workPic hidden" src="/images/Ritvick workex.webp" alt="">
+        <img class="workPic hidden" src="images/Ritvick workex.webp" alt="">
         <h2>Work Experience</h2>
         <p class="texthidden">2018: CNH Industrials: R&D Operations Bay Summer Intern</p>
         <p class="texthidden">2021: LIDO: Business Development Associate</p>
@@ -69,7 +69,7 @@
 
     <!-- Formal Education -->
     <div class="life">
-      <img class="studyPic hidden" src="/images/Ritvick Study.webp" alt="">
+      <img class="studyPic hidden" src="images/Ritvick Study.webp" alt="">
       <h1>Formal Education</h1>
       <h2>School Life</h2>
       <table class="texthidden">
@@ -107,7 +107,7 @@
     </div>
 
     <div id="skills">
-      <img class="skill1Pic hidden" src="/images/Ritvick skill1.webp" alt="">
+      <img class="skill1Pic hidden" src="images/Ritvick skill1.webp" alt="">
       <img class="skill2Pic hidden" src="images/Ritvick skill2.webp" alt="">
       <h1>Skills</h1>
       <div class="row">
