--- a/Projects.html
+++ b/Projects.html
@@ -25,7 +25,7 @@
             <a class="nav-link" href="CV_New.pdf" download="CV_New.pdf">CV-Download</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#contact-me">Contact-Me</a>
+            <a class="nav-link" href="mailto:ritvickp9@gmail.com">Contact-Me</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#" rel="noopener">Projects</a>
