--- a/Projects.html
+++ b/Projects.html
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="CV_New.pdf" download="CV_New.pdf">CV-Download</a>
+            <a class="nav-link" href="RITVICK PANT_FRONTEND DEV.pdf" download="RITVICK PANT_FRONTEND DEV.pdf">CV-Download</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="mailto:ritvickp9@gmail.com">Contact-Me</a>
