--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li> -->
           <li class="nav-item">
-            <a class="nav-link" href="CV_New.pdf" download="CV_New.pdf">CV-Download</a>
+            <a class="nav-link" href="RITVICK PANT_FRONTEND DEV.pdf" download="RITVICK PANT_FRONTEND DEV.pdf">CV-Download</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact-me">Contact-Me</a>
@@ -40,7 +40,7 @@
 
 <!-- Top Most Part -->
     <div class="top">
-      <img src="images/mountain.jpg" alt="" class="background">
+      <img src="images/greg-rakozy-0LU4vO5iFpM-unsplash.jpg" alt="Greg Rakozy on Unsplash" class="background">
       <div class="title">
         <h1>I'm Ritvick</h1>
         <h2>an engineer</h2>
