--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
     <div class="transform">
       <div class="middle">
         <img class="mypic" src="images/Ritvick Avatar.webp" alt="My Picture">
-        <!-- <h2>hey there</h2> -->
         <h2>happy to see you, here's a peep into my life</h2>
       </div>
       <div class="workex">
         <img class="workPic hidden" src="images/Ritvick workex.webp" alt="">
+      <div class="workexContent">
         <h2>Work Experience</h2>
         <p class="texthidden">2018: CNH Industrials: R&D Operations Bay Summer Intern</p>
         <p class="texthidden">2021: LIDO: Business Development Associate</p>
@@ -63,7 +63,7 @@
         <div class="hidden">
           <a class="btn" href="Projects.html">Projects</a>
         </div>
-        
+      </div>
       </div>
     </div>
 
@@ -107,8 +107,6 @@
     </div>
 
     <div id="skills">
-      <img class="skill1Pic hidden" src="images/Ritvick skill1.webp" alt="">
-      <img class="skill2Pic hidden" src="images/Ritvick skill2.webp" alt="">
       <h1>Skills</h1>
       <div class="row">
         <div class="column col-lg-3 col-md-4">
@@ -152,6 +150,8 @@
           </div>
         </div>
       </div>
+      <img class="skill1Pic hidden" src="images/Ritvick skill1.webp" alt="">
+      <img class="skill2Pic texthidden" src="images/Ritvick skill2.webp" alt="">
     </div>
 
   <div id="contact-me">
