--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
     <!-- Formal Education -->
     <div class="life">
       <img class="studyPic hidden" src="images/Ritvick Study.webp" alt="">
-      <h1>Formal Education</h1>
+      <div class="lifeContent">
+        <h1>Formal Education</h1>
       <h2>School Life</h2>
       <table class="texthidden">
         <thead>
@@ -105,53 +106,58 @@
         </tbody>
       </table>
     </div>
+  </div>
+      
 
     <div id="skills">
-      <h1>Skills</h1>
-      <div class="row">
-        <div class="column col-lg-3 col-md-4">
-          <div class="card texthidden">
-            <p>HTML</p>
+      <img class="skill1Pic hidden" src="images/Ritvick skill1.webp" alt="">
+      <img class="skill2Pic texthidden" src="images/Ritvick skill2.webp" alt="">
+      <div class="skillContent">
+        <h1>Skills</h1>
+        <div class="row">
+          <div class="column col-lg-3 col-md-4">
+            <div class="card texthidden">
+              <p>HTML</p>
+            </div>
           </div>
-        </div>
-        <div class="column col-lg-3 col-md-4">
-          <div class="card hidden">
-            <p>CSS</p>
+          <div class="column col-lg-3 col-md-4">
+            <div class="card hidden">
+              <p>CSS</p>
+            </div>
           </div>
-        </div>
-        <div class="column col-lg-3 col-md-4">
-          <div class="card texthidden">
-            <p>Bootstrap</p>
+          <div class="column col-lg-3 col-md-4">
+            <div class="card texthidden">
+              <p>Bootstrap</p>
+            </div>
           </div>
-        </div>
-        <div class="column col-lg-3 col-md-4">
-          <div class="card hidden">
-            <p>Javascript</p>
+          <div class="column col-lg-3 col-md-4">
+            <div class="card hidden">
+              <p>Javascript</p>
+            </div>
           </div>
-        </div>
-        <div class="column col-lg-3 col-md-4">
-          <div class="card texthidden">
-            <p>EJS</p>
+          <div class="column col-lg-3 col-md-4">
+            <div class="card texthidden">
+              <p>EJS</p>
+            </div>
           </div>
-        </div>
-        <div class="column col-lg-3 col-md-4">
-          <div class="card hidden">
-            <p>Node.Js</p>
+          <div class="column col-lg-3 col-md-4">
+            <div class="card hidden">
+              <p>Node.Js</p>
+            </div>
           </div>
-        </div>
-        <div class="column col-lg-3 col-md-4">
-          <div class="card texthidden">
-            <p>React</p>
+          <div class="column col-lg-3 col-md-4">
+            <div class="card texthidden">
+              <p>React</p>
+            </div>
           </div>
-        </div>
-        <div class="column col-lg-3 col-md-4">
-          <div class="card texthidden">
-            <p>Express</p>
+          <div class="column col-lg-3 col-md-4">
+            <div class="card texthidden">
+              <p>Express</p>
+            </div>
           </div>
         </div>
       </div>
-      <img class="skill1Pic hidden" src="images/Ritvick skill1.webp" alt="">
-      <img class="skill2Pic texthidden" src="images/Ritvick skill2.webp" alt="">
+
     </div>
 
   <div id="contact-me">
