--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
         <img class="workPic hidden" src="images/Ritvick workex.webp" alt="">
       <div class="workexContent">
         <h2>Work Experience</h2>
-        <p class="texthidden">2018: CNH Industrials: R&D Operations Bay Summer Intern</p>
-        <p class="texthidden">2021: LIDO: Business Development Associate</p>
+        <p class="texthidden">Jun 2018: CNH Industrials: R&D Operations Bay Summer Intern</p>
+        <p class="texthidden">Feb 2021-Apr 2021: LIDO: Business Development Associate</p>
+        <p class="texthidden">Aug 2023-Present: Nokia IT(Elikem): Frontend Developer</p>
         <p class="texthidden">Also have a look at some of my projects</p>
         <div class="hidden">
           <a class="btn" href="Projects.html">Projects</a>
