--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li> -->
           <li class="nav-item">
-            <a class="nav-link" href="RITVICK PANT_FRONTEND DEV.pdf" download="RITVICK PANT_FRONTEND DEV.pdf">CV-Download</a>
+            <a class="nav-link" href="RITVICK PANT_WEB DEV.pdf" download="RITVICK PANT_WEB DEV.pdf">CV-Download</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact-me">Contact-Me</a>
@@ -159,6 +159,11 @@
                       <strong>Frontend Developer</strong>
                     </p>
                   </div>
+                  <p>Leading the team, building our main web app from scratch using
+                    React and NodeJs.
+                    Maintained and built new features for the Angular + Springboot dashboard
+                    Built multiple dashboards using different technologies (Flask, React, etc.)
+                    </p>
                 </div>
               </div>
             </div>
