--- a/index.html
+++ b/index.html
@@ -208,6 +208,14 @@
           </div>   
           <img class="studyPic hidden" src="images/Ritvick Study.webp" alt="">
        </div>
+       <div class="column col-lg-4 col-md-4">
+        <a href="https://rider-life-qw53.vercel.app/" target="_blank">
+          <div class="card hidden">
+            <img src="images/rider-life.jpg" alt="">
+            <p>Weather App</p>
+          </div>
+        </a>
+       </div>
     </div>
   </div>
       
