--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         <a href="https://rider-life-qw53.vercel.app/" target="_blank">
           <div class="card hidden">
             <img src="images/rider-life.jpg" alt="">
-            <p>Weather App</p>
+            <p>Rider Life</p>
           </div>
         </a>
        </div>
